--- a/app/views/hotel_branches/show.html.erb
+++ b/app/views/hotel_branches/show.html.erb
@@ -8,7 +8,7 @@
         <p class="card-text "> Area: <%= @hotel.address %></p>
         <p class="card-text "> City: <%= @hotel.city %></p>
         <p class="card-text"> State: <%= @hotel.state %></p>
-        <p class="card-text"> Location: <%= @hotel.location.country %></p>
+        <p class="card-text"> Location: <%= @hotel.location.name %></p>
        <h2 class="card-subtitle mb-2 text-muted">Number: <%= @hotel.phone %></h2>
        <h2 class="card-subtitle mb-2 text-muted">Website: <%= @hotel.website %></h2>
     </div>
