--- a/app/views/regions/index.html.erb
+++ b/app/views/regions/index.html.erb
@@ -1,29 +1,24 @@
 <h1>Regions</h1>
-
 <table class="table">
   <thead>
     <tr>
       <th>Region Name</th>
-
       <th colspan="3">Actions</th>
     </tr>
   </thead>
-
   <tbody id="region-table">
       <% @regions.each do |region| %>
         <%= render 'region' , region: region %>
       <% end %>
   </tbody>
 </table>
-
 <br>
-
 
 <!-- Button trigger modal -->
 <button type="button", class="btn btn-primary", data-bs-toggle="modal", data-bs-target="#newModal">
   Add New Region
 </button>
-<!-- Modal -->
+<!-- Add Region Modal -->
 <div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
