--- a/app/views/room_facilities/_room_facility.html.erb
+++ b/app/views/room_facilities/_room_facility.html.erb
@@ -6,6 +6,7 @@
   <td><%= link_to 'Destroy', room_facility,class: 'btn btn-danger',remote: true, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 </tr>
 
+<!-- Edit Room Facility Modal-->
 <div class="modal fade" id="editroom_facility-<%= room_facility.id %>" tabindex="-1" role="dialog" aria-labelledby="editModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
