--- a/app/views/room_facility_categories/index.html.erb
+++ b/app/views/room_facility_categories/index.html.erb
@@ -1,5 +1,4 @@
 <h1>Listing Room Facility Categories</h1>
-
 <table class="table">
   <thead>
     <tr>
@@ -14,14 +13,13 @@
     <% end %>
   </tbody>
 </table>
-
 <br>
 
 <!-- Button trigger modal -->
 <button type="button", class="btn btn-primary", data-bs-toggle="modal", data-bs-target="#newModal">
   Add New Category
 </button>
-<!-- Modal -->
+<!-- Add Room Facility Category Modal -->
 <div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
