--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -14,11 +14,11 @@
 </table>
 
 <br>
-<!-- Button trigger modal -->
+<!-- Button trigger modal for adding new client -->
 <button type="button", class="btn btn-primary", data-bs-toggle="modal", data-bs-target="#newModal">
   Add New Client
 </button>
-<!-- Modal -->
+<!--  Add New Client Modal -->
 <div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
