--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -5,8 +5,8 @@
         <td><%= link_to 'Edit', edit_location_path(location), data: {remote: true, bs_toggle: "modal", bs_target: "#editlocation_#{location.id}"}, class: 'btn btn-primary' %></td>
         <td><%= button_to 'Delete', location_path(location), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
       </tr>
-
-  <!-- Edit Modal -->
+      
+  <!-- Edit Location Modal  -->
   <div class="modal fade" id="editlocation_<%= location.id %>" tabindex="-1" role="dialog" aria-labelledby="editModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
