--- a/app/views/room_facilities/index.html.erb
+++ b/app/views/room_facilities/index.html.erb
@@ -1,5 +1,4 @@
 <h1>Listing Room Facilities</h1>
-
 <table class="table">
   <thead>
     <tr>
@@ -8,7 +7,6 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody id="roomfacility-table">
     <% @room_facilities.each do |room_facility| %>
      <%= render 'room_facility' , room_facility: room_facility %>
@@ -21,7 +19,7 @@
 <button type="button", class="btn btn-primary", data-bs-toggle="modal", data-bs-target="#newModal">
   Add New Facility
 </button>
-<!-- Modal -->
+<!-- Add Room Facility Modal -->
 <div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
