--- a/app/views/room_facility_categories/_room_facility_category.html.erb
+++ b/app/views/room_facility_categories/_room_facility_category.html.erb
@@ -5,6 +5,7 @@
   <td><%= button_to 'Destroy', room_facility_category,class: 'btn btn-danger',remote: true,method: :delete, data: { confirm: 'Are you sure?' } %></td>
 </tr>
 
+<!-- Edit Room Facility Category Modal -->
 <div class="modal fade" id="editroom_facility_category-<%= room_facility_category.id %>" tabindex="-1" role="dialog" aria-labelledby="editModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
