--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -22,7 +22,7 @@
 <button type="button", class="btn btn-primary", data-bs-toggle="modal", data-bs-target="#newModal">
   Add New Room
 </button>
-<!-- Modal -->
+<!-- Add Room Modal -->
 <div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
@@ -39,7 +39,6 @@
     </div>
   </div>
 </div> 
-
 
 <%= link_to 'View Room facilities', room_facilities_path, class: 'btn btn-secondary' %>
 
