--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,4 @@
+  <!-- Form for adding and editing user details -->
   <div class="container">
     <div class="row justify-content-center">
      <div class="col-10">
