--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -5,7 +5,7 @@
     <td><%= link_to 'Destroy', client_path(client), method: :delete, data: { confirm: 'Are you sure, All the associates will get deleted?' } , class: 'btn btn-danger'%></td>
   </tr>
 
-  <!-- Edit Modal -->
+  <!-- Edit Client Modal -->
   <div class="modal fade" id="editclient-<%= client.id %>" tabindex="-1" role="dialog" aria-labelledby="editModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
