--- a/app/views/room_facilities/_newform.html.erb
+++ b/app/views/room_facilities/_newform.html.erb
@@ -1,3 +1,4 @@
+<!-- Add room facility form -->
 <div class="container">
   <div class="row justify-content-center mt-4 ">
     <div class="col-md-8">
