--- a/app/views/hotel_branches/_hotel.html.erb
+++ b/app/views/hotel_branches/_hotel.html.erb
@@ -7,7 +7,7 @@
     <td><%= hotel.client.name if hotel.client %></td>
     <td><%= hotel.phone %></td>
     <td><%= hotel.website %></td>
-    <td><%= link_to 'show', hotel_branch_path(hotel), class: 'btn btn-secondary' %></td>
+    <td><%= link_to 'show', hotel_branch_path(hotel), class: 'btn btn-secondary', data: {remote: true, bs_toggle: "modal", bs_target: "#showhotel_#{hotel.id}" } %></td>
   <td><%= link_to 'Edit', edit_hotel_branch_path(hotel),  data: {remote: true , bs_toggle: "modal", bs_target: "#edithotel_#{hotel.id}"},  class: 'btn btn-primary' %></td>
     <td><%= button_to 'Delete', hotel_branch_path(hotel), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure Rooms and its Associates will also be deleted?' }%></td>
   </tr>
@@ -67,3 +67,37 @@
     </div>
   </div>
 </div> 
+
+<!-- Hotel Show page modal -->
+<div class="modal fade" id="showhotel_<%= hotel.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        <button type="button" id= "closeShowForm" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+      <div class="modal-body">
+        <div class="container mt-5">
+          <div class="card">
+            <div class="card-header">
+              <h1 class="card-title"><%= hotel.name %></h1>
+            </div>
+            <div class="card-body">
+              <h2 class="card-subtitle mb-2 text-muted">Address:</h2>
+                <p class="card-text "> Area: <%= hotel.address %></p>
+                <p class="card-text "> City: <%= hotel.city %></p>
+                <p class="card-text"> State: <%= hotel.state %></p>
+                <p class="card-text"> Location: <%= hotel.location.name %></p>
+              <h2 class="card-subtitle mb-2 text-muted">Number: <%= hotel.phone %></h2>
+              <h2 class="card-subtitle mb-2 text-muted">Website: <%= hotel.website %></h2>
+            </div>
+            <div class="card-footer text-muted">
+              <%= link_to 'Rooms', rooms_path, class: 'btn btn-primary' %>
+              <%= link_to 'Back', hotel_branches_path, class: 'btn btn-secondary' %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
