--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -1,7 +1,9 @@
 <tr id="location_<%= location.id %>">
   <td><%= location.name %></td>
   <td><%= location.region.name %></td>
-  <td><%= link_to 'Show', location_path(location), class: 'btn btn-primary' %></td>
+  <!-- button trigger modal for show page-->
+  <td><%= link_to 'Show', location_path(location), class: 'btn btn-primary', data: {remote: true, bs_toggle:"modal", bs_target:"#showlocation_#{location.id}"} %></td>
+  <!-- Button trigger modal for  location's edit form -->
   <td><%= link_to 'Edit', edit_location_path(location), data: {remote: true, bs_toggle: "modal", bs_target: "#editlocation_#{location.id}"}, class: 'btn btn-primary' %></td>
   <td><%= button_to 'Delete', location_path(location), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
 </tr>
@@ -38,3 +40,30 @@
     </div>
   </div>
 </div> 
+
+<!-- Location Show page modal -->
+<div class="modal fade" id="showlocation_<%= location.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="myModalLabel">Location Details</h4>
+        <button type="button" id= "closeShowForm" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+        <div class="container mt-5">
+          <div class="card">
+            <div class="card-header">
+              <h1 class="card-title">Location Details</h1>
+            </div>
+            <div class="card-body">
+              <h2 class="card-subtitle mb-2 text-muted"> Name: <%= location.name %></h2>
+              <h2 class="card-subtitle mb-2 text-muted">Region: <%= location.region.name %></h2>
+            </div>
+            <div class="card-footer text-muted">
+              <%= link_to 'Back', locations_path, class: 'btn btn-secondary' %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
