--- a/app/views/regions/_region.html.erb
+++ b/app/views/regions/_region.html.erb
@@ -1,7 +1,9 @@
 <tr id="region_<%= region.id %>">
   <td><%= region.name %></td>
-  <td><%= link_to 'Show', region_path(region), class: 'btn btn-secondary' %></td>
-  <td><%= link_to 'Edit', edit_region_path(region),class: 'btn btn-primary', data: { remote: true, "bs_toggle": "modal", "bs_target": "#editregion_#{region.id}"} %></td>
+  <!-- Button trigger modal for showing region -->
+  <td><%= link_to 'Show', region_path(region), class: 'btn btn-secondary', data: {remote: true, bs_toggle: "modal", bs_target: "#showregion_#{region.id}"} %></td>
+  <!-- Button trigger modal for editing region -->
+  <td><%= link_to 'Edit', edit_region_path(region),class: 'btn btn-primary', data: { remote: true, bs_toggle: "modal", bs_target: "#editregion_#{region.id}"} %></td>
   <td><%= button_to 'Delete', region_path(region), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
 </tr>
 
@@ -34,3 +36,26 @@
     </div>
   </div>
 </div> 
+
+<!-- Region Show page modal -->
+<div class="modal fade" id="showregion_<%= region.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="myModalLabel">Region Details</h4>
+        <button type="button" id= "closeShowForm" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+       <div class="container mt-5">
+        <div class="card">
+          <div class="card-header">
+            <h1 class="card-title"><%= region.name %></h1>
+          </div>
+          <div class="card-footer text-muted">
+            <%= link_to 'Back', regions_path, class: 'btn btn-secondary' %>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
