--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -3,7 +3,9 @@
   <td><%= room.capacity %></td>
   <td><%= room.price %></td>
   <td><%= room.hotel_branch.name %></td>
-  <td><%= link_to 'Show', room_path(room) , class: 'btn btn-primary' %></td>
+  <!-- Button trigger for room show page modal -->
+  <td><%= link_to 'Show', room_path(room) , class: 'btn btn-primary', data: {remote: true, bs_toggle: "modal", bs_target: "#showroom-#{room.id}"} %></td>
+  <!-- Button trigger for room's edit form -->
   <td><%= link_to 'Edit', edit_room_path(room), data: { remote: true , bs_toggle: "modal", bs_target: "#editroom-#{room.id}"}, class: 'btn btn-secondary' %></td>
   <td><%= button_to 'Delete', room_path(room), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
 </tr>
@@ -46,5 +48,32 @@
           </div>
         </div>
       </div>
+  </div>
+</div>
+
+<!-- Room's Show page modal -->
+<div class="modal fade" id="showroom-<%= room.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="myModalLabel">Room Details</h4>
+        <button type="button" id= "closeShowForm" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+      <div class="container mt-5">
+        <div class="card">
+          <div class="card-header">
+            <h1 class="card-title"><%= room.name %></h1>
+          </div>
+          <div class="card-body">
+            <h2 class="card-subtitle mb-2 text-muted">Capacity: <%= room.capacity %></h2>
+            <h2 class="card-subtitle mb-2 text-muted">Price: <%= room.price %></h2>
+            <h2 class="card-subtitle mb-2 text-muted">Hotel: <%= room.hotel_branch.name %></h2>
+          </div>
+          <div class="card-footer text-muted">
+            <%= link_to 'Back', rooms_path, class: 'btn btn-secondary' %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
