--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -17,30 +17,40 @@
       </div>
       <div class="modal-body">
         <div id="editerrors"></div>
-          <%= form_with(model: client, data: { remote: true}, method: :patch, id: 'edit-form') do |f| %>
-            <div class="form-group ">
-              <%= f.label :Name %>
-              <%= f.text_field :name, class: 'form-control mt-2' %>
+          <div class="container">
+            <div class="row justify-content-center mt-4 ">
+              <div class="col-md-8">
+                <div class="card">
+                  <div class="card-header">Edit Client details</div>
+                  <div class="card-body">
+                    <%= form_with(model: client, data: { remote: true}, method: :patch, id: 'edit-form') do |f| %>
+                      <div class="form-group ">
+                        <%= f.label :Name %>
+                        <%= f.text_field :name, class: 'form-control mt-2' %>
+                      </div>
+                      <div class="form-group">
+                        <%= f.label :Region %>
+                        <%= f.select :region_ids, options_from_collection_for_select( Region.all, :id, :name,selected: client.region_ids,prompt: "Select Regions"), {include_hidden: false}, {:multiple => true, :class=>"form-control", id: "region-#{client.id}" } %>
+                      </div>
+                      <div class="form-group">
+                        <%= f.label :Location %>
+                        <%= f.select :location_ids, options_for_select([["Select Locations"]],selected: client.location_ids), {include_hidden: false}, {class: "form-control" ,id: "location-#{client.id}" , multiple: true,selected: @client.locations.pluck(:id)} %>     
+                      </div>
+                      <div class="form-group">
+                        <%= f.submit 'Update Client', class: 'btn btn-primary mt-2' %>
+                      </div>
+                    <% end %>
+                      <div class="card-footer text-muted">
+                        <%= link_to 'Back', clients_path , class: 'btn btn-secondary mt-2' %>
+                      </div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="form-group">
-              <%= f.label :Region %>
-              <%= f.select :region_ids, options_from_collection_for_select( Region.all, :id, :name,selected: client.region_ids,prompt: "Select Regions"), {include_hidden: false}, {:multiple => true, :class=>"form-control", id: "region-#{client.id}" } %>
-            </div>
-            <div class="form-group">
-              <%= f.label :Location %>
-               <%= f.select :location_ids, options_for_select([["Select Locations"]],selected: client.location_ids), {include_hidden: false}, {class: "form-control" ,id: "location-#{client.id}" , multiple: true,selected: @client.locations.pluck(:id)} %>     
-            </div>
-            <div class="form-group">
-              <%= f.submit 'Update Client', class: 'btn btn-primary mt-2' %>
-            </div>
-          <% end %>
-            <div class="card-footer text-muted">
-              <%= link_to 'Back', clients_path , class: 'btn btn-secondary mt-2' %>
-            </div>
+          </div>    
       </div>
     </div>
   </div>
-
   <script>
     $(document).on('change', '#region-<%= client.id %>', function getLocations() {
       var selectedRegions = $(this).val();
