--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -61,8 +61,8 @@
       </div>
       <div class="container mt-5">
         <div class="card">
-          <div class="card-header">
-            <h1 class="card-title"><%= room.name %></h1>
+          <div class="card-header"> 
+            <h1 class="card-title">Room details of <%= room.name %></h1>
           </div>
           <div class="card-body">
             <h2 class="card-subtitle mb-2 text-muted">Capacity: <%= room.capacity %></h2>
