Resolved migration error, implemented displaying saved locations in edit modal, and fixed issue with multiple records being appended upon clicking 'show' button. Consolidated error handling in edit and new forms.

--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -34,7 +34,7 @@
             </div>
           <% end %>
           <div class="card-footer text-muted">
-            <%= link_to 'Back', locations_path, class: 'btn btn-secondary' %>
+            <%= link_to 'Back', locations_path, class: 'btn btn-secondary mt-2' %>
           </div>
       </div>
     </div>
@@ -52,10 +52,9 @@
         <div class="container mt-5">
           <div class="card">
             <div class="card-header">
-              <h1 class="card-title">Location Details</h1>
+              <h1 class="card-title">Name: <%= location.name %></h1>
             </div>
             <div class="card-body">
-              <h2 class="card-subtitle mb-2 text-muted"> Name: <%= location.name %></h2>
               <h2 class="card-subtitle mb-2 text-muted">Region: <%= location.region.name %></h2>
             </div>
             <div class="card-footer text-muted">
