Renamed all the newform partials to form partials, removed edit_errors.js files for all the views and maintained a single errors.js rendering file for new and edit form errors

--- a/app/views/clients/errors.js.erb
+++ b/app/views/clients/errors.js.erb
@@ -1,4 +1,4 @@
 <% if @client.errors.any? %>
   $("#errors").html("<%= j(render 'clients/errors', client: @client) %>");
-
+  $("#editerrors").html("<%= j(render 'clients/errors', client: @client) %>");
 <% end %> 
