--- a/app/views/hotel_branches/errors.js.erb
+++ b/app/views/hotel_branches/errors.js.erb
@@ -1,6 +1,7 @@
 <% if @hotel.errors.any? %>
   $("#errors").html("<%= j(render 'hotel_branches/errors', hotel: @hotel) %>");
-  $('#newModal').modal('show');
+  $("#editerrors").html("<%= j(render 'hotel_branches/errors', hotel: @hotel) %>");
+
 <% end %> 
 
 
