--- a/app/views/hotel_branches/index.html.erb
+++ b/app/views/hotel_branches/index.html.erb
@@ -35,7 +35,7 @@
       </div>
       <div class="modal-body">
         <div id="errors"></div>
-        <%= render 'newform'%>
+        <%= render 'form'%>
       </div>
     </div>
   </div>
