--- a/app/views/regions/errors.js.erb
+++ b/app/views/regions/errors.js.erb
@@ -1,4 +1,4 @@
 <% if @region.errors.any? %>
   $("#errors").html("<%= j(render 'regions/errors', region: @region) %>");
-  $("#editregion_<%=@region.id%>").show();
+  $("#editerrors").html("<%= j(render 'regions/errors', region: @region) %>");
 <% end %> 
