--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -16,7 +16,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <div id="errors"></div>
+        <div id="editerrors"></div>
           <div class="container">
             <div class="row justify-content-center mt-4 ">
               <div class="col-md-8">
