--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -30,7 +30,7 @@
       </div>
       <div class="modal-body">
         <div id="errors"></div>
-        <%= render 'newform' %>
+        <%= render 'form' %>
       </div>
     </div>
   </div>
