--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -32,7 +32,7 @@
       </div>
       <div class="modal-body">
         <div id="errors"></div>
-        <%= render 'newform'%>
+        <%= render 'form'%>
       </div>
     </div>
   </div>
