--- a/app/views/room_facilities/errors.js.erb
+++ b/app/views/room_facilities/errors.js.erb
@@ -1,4 +1,4 @@
 <% if @room_facility.errors.any? %>
   $("#errors").html("<%= j(render 'room_facilities/errors', room_facility: @room_facility) %>");
-  $("#editroom_facility-<%=@room_facility.id%>").show();
+   $("#editerrors").html("<%= j(render 'room_facilities/errors', room_facility: @room_facility) %>");
 <% end %> 
