--- a/app/views/room_facility_categories/errors.js.erb
+++ b/app/views/room_facility_categories/errors.js.erb
@@ -1,4 +1,4 @@
 <% if @room_facility_category.errors.any? %>
   $("#errors").html("<%= j(render 'room_facility_categories/errors', room_facility_category: @room_facility_category) %>");
-  $('#newModal').show()
+  $("#editerrors").html("<%= j(render 'room_facility_categories/errors', room_facility_category: @room_facility_category) %>");
 <% end %> 
