--- a/app/views/room_facility_categories/index.html.erb
+++ b/app/views/room_facility_categories/index.html.erb
@@ -31,7 +31,7 @@
       </div>
       <div class="modal-body">
         <div id="errors"></div>
-        <%= render 'newform'%>
+        <%= render 'form'%>
       </div>
     </div>
   </div>
