--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -3,7 +3,9 @@
   <div class="row justify-content-center mt-4 ">
     <div class="col-md-8">
       <div class="card">
-        <div class="card-header">Add a New Client</div>
+        <div class="card-header">
+          <h1>Add Client</h1>
+        </div>
         <div class="card-body">
           <%= form_with model: @client, url: clients_path, data: {remote: true}, method: :post do |f| %>
             <div class="form-group">
@@ -19,12 +21,11 @@
               <%= f.label :Location %>
                <%= f.select :location_ids, options_for_select([["Select Locations"]]), {include_hidden: false}, {class: "form-control" ,id: "location_ids" , multiple: true} %>     
             </div>
-            <div class="form-group">
+            <div class="card-footer text-muted">
               <%= f.submit 'Add Client', class: 'btn btn-primary' %>
+              <%= link_to 'Back', clients_path , class: 'btn btn-secondary' %>
             </div>
           <% end %>
-          <div class="card-footer text-muted">
-            <%= link_to 'Back', clients_path , class: 'btn btn-secondary mt-2' %>
           </div>
         </div>
       </div>
