--- a/app/views/hotel_branches/_form.html.erb
+++ b/app/views/hotel_branches/_form.html.erb
@@ -3,7 +3,9 @@
   <div class="row justify-content-center mt-4 ">
     <div class="col-md-8">
       <div class="card">
-        <div class="card-header">Add a New Hotel</div>
+        <div class="card-header">
+          <h1>Add Hotel</h1>
+        </div>
         <div class="card-body">
           <%= form_with(model: @hotel, data: { remote: true}, method: :post) do |f| %>
             <div class="form-group">
@@ -38,13 +40,11 @@
               <%= f.label :Website %>
               <%= f.text_field :website, class: 'form-control' %>
             </div>
-            <div class="form-group">
-              <%= f.submit 'Add Hotel', class: 'btn btn-primary' %>
-            </div>
-          <% end %>
           <div class="card-footer text-muted">
+              <%= f.submit 'Add Hotel', class: 'btn btn-primary' %>
             <%= link_to 'Back', hotel_branches_path, class: 'btn btn-secondary' %>
           </div>
+        <% end %>
         </div>
       </div>
     </div>
