--- a/app/views/hotel_branches/_hotel.html.erb
+++ b/app/views/hotel_branches/_hotel.html.erb
@@ -25,45 +25,56 @@
       </div>
       <div class="modal-body">
         <div id="editerrors"></div>
-        <%= form_with(model: hotel, data: { remote: true}, method: :patch, id: 'editModal' ) do |f| %>
-          <div class="form-group">
-            <%= f.label :Name %>
-            <%= f.text_field :name, class: 'form-control' %>
+        <div class="container">
+          <div class="row justify-content-center mt-4 ">
+            <div class="col-md-8">
+              <div class="card">
+                <div class="card-header">
+                  <h1>Edit Hotel</h1>
+                </div>
+                <div class="card-body">
+                  <%= form_with(model: hotel, data: { remote: true}, method: :patch, id: 'editModal' ) do |f| %>
+                    <div class="form-group">
+                      <%= f.label :Name %>
+                      <%= f.text_field :name, class: 'form-control' %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.label :Address %>
+                      <%= f.text_field :address, class: 'form-control' %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.label :City%>
+                      <%= f.text_field :city, class: 'form-control' %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.label :State %>
+                      <%= f.text_field :state, class: 'form-control' %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.label :Location %><br/>
+                      <%= f.collection_select :location_id, Location.all, :id, :name , class: 'form-control' %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.label :Client %><br/>
+                      <%= f.select :client_id,Client.all.collect {|x| [x.name, x.id]}, {} %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.label :Phone %>
+                      <%= f.text_field :phone, class: 'form-control' %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.label :Website %>
+                      <%= f.text_field :website, class: 'form-control' %>
+                    </div>
+                  <div class="card-footer text-muted ">
+                    <%= f.submit 'Update Hotel', class: 'btn btn-primary ' %>
+                    <%= link_to 'Back', hotel_branches_path, class: 'btn btn-secondary' %>
+                  </div>
+                <% end %>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="form-group">
-            <%= f.label :Address %>
-            <%= f.text_field :address, class: 'form-control' %>
-          </div>
-          <div class="form-group">
-            <%= f.label :City%>
-            <%= f.text_field :city, class: 'form-control' %>
-          </div>
-          <div class="form-group">
-            <%= f.label :State %>
-            <%= f.text_field :state, class: 'form-control' %>
-          </div>
-          <div class="form-group">
-            <%= f.label :Location %><br/>
-            <%= f.collection_select :location_id, Location.all, :id, :name , class: 'form-control' %>
-          </div>
-          <div class="form-group">
-            <%= f.label :Client %><br/>
-            <%= f.select :client_id,Client.all.collect {|x| [x.name, x.id]}, {} %>
-          </div>
-          <div class="form-group">
-            <%= f.label :Phone %>
-            <%= f.text_field :phone, class: 'form-control' %>
-          </div>
-          <div class="form-group">
-            <%= f.label :Website %>
-            <%= f.text_field :website, class: 'form-control' %>
-          </div>
-          <div class="form-group">
-            <%= f.submit 'Update Hotel', class: 'btn btn-primary' %>
-          </div>
-        <% end %>
-        <div class="card-footer text-muted">
-          <%= link_to 'Back', hotel_branches_path, class: 'btn btn-secondary' %>
         </div>
       </div>
     </div>
