--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -3,18 +3,20 @@
   <div class="row justify-content-center mt-4 ">
     <div class="col-md-8">
       <div class="card">
-        <div class="card-header">Add a New Location</div>
+        <div class="card-header">
+          <h1> Add Location</h1>
+        </div>
         <div class="card-body">
-        <% if @location.errors.any? %>
-          <div id="error_explanation">
-            <h2><%= pluralize(@location.errors.count, "error") %> prohibited this location from being saved:</h2>
-            <ul>
-              <% @location.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-              <% end %>
-            </ul>
-          </div>
-        <% end %>
+          <% if @location.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(@location.errors.count, "error") %> prohibited this location from being saved:</h2>
+              <ul>
+                <% @location.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
           <%= form_with model: @location, data: {remote: true} do |f| %>
             <div class="form-group">
               <%= f.label :Name%>
@@ -24,13 +26,11 @@
               <%= f.label :Region %><br/>
               <%= f.select :region_id, Region.all.collect {|x| [x.name, x.id]}, {} %>
             </div>
-            <div class="form-group">
-              <%= f.submit 'Add Location', class: 'btn btn-primary mt-2' %>
+            <div class="card-footer text-muted">
+              <%= f.submit 'Add Location', class: 'btn btn-primary' %>
+              <%= link_to 'Back', locations_path, class: 'btn btn-secondary' %>
             </div>
           <% end %>
-          <div class="card-footer text-muted">
-            <%= link_to 'Back', locations_path, class: 'btn btn-secondary' %>
-          </div>
         </div>
       </div>
     </div>
