--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -20,22 +20,33 @@
       </div>
       <div class="modal-body">
         <div id="editerrors"></div>
-        <%= form_with(model: location, data: { remote: true}, method: :patch, id: 'editModal' ) do |f| %>
-            <div class="form-group">
-              <%= f.label :Name%>
-              <%= f.text_field :name, class: 'form-control' %>
+        <div class="container">
+          <div class="row justify-content-center mt-4 ">
+            <div class="col-md-8">
+              <div class="card">
+                <div class="card-header">
+                  <h1> Edit Location</h1>
+                </div>
+                <div class="card-body">
+                  <%= form_with(model: location, data: { remote: true}, method: :patch, id: 'editModal' ) do |f| %>
+                    <div class="form-group">
+                      <%= f.label :Name%>
+                      <%= f.text_field :name, class: 'form-control' %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.label :Region %><br/>
+                      <%= f.select :region_id, Region.all.collect {|x| [x.name, x.id]}, {} %>
+                    </div>
+                    <div class="card-footer text-muted">
+                      <%= f.submit 'Update Location', class: 'btn btn-primary mt-2' %>
+                      <%= link_to 'Back', locations_path, class: 'btn btn-secondary mt-2' %>
+                    </div>
+                  <% end %>
+                </div>
+              </div>
             </div>
-            <div class="form-group">
-              <%= f.label :Region %><br/>
-              <%= f.select :region_id, Region.all.collect {|x| [x.name, x.id]}, {} %>
-            </div>
-            <div class="form-group">
-              <%= f.submit 'Update Location', class: 'btn btn-primary mt-2' %>
-            </div>
-          <% end %>
-          <div class="card-footer text-muted">
-            <%= link_to 'Back', locations_path, class: 'btn btn-secondary mt-2' %>
           </div>
+        </div>
       </div>
     </div>
   </div>
