--- a/app/views/regions/_form.html.erb
+++ b/app/views/regions/_form.html.erb
@@ -3,20 +3,20 @@
   <div class="row justify-content-center mt-4 ">
     <div class="col-md-8">
       <div class="card">
-        <div class="card-header">Add a New region</div>
+        <div class="card-header">
+          <h1>Add Region</h1>
+        </div>
         <div class="card-body">
           <%= form_with model: @region, data: { remote: true} do |f| %>
             <div class="form-group">
               <%= f.label :Region%>
               <%= f.text_field :name, class: 'form-control' %>
             </div>
-            <div class="form-group">
-              <%= f.submit 'Add Region', class: 'btn btn-primary mt-2' %>
+            <div class="card-footer text-muted">
+              <%= f.submit 'Add Region', class: 'btn btn-primary ' %>
+              <%= link_to 'Back', regions_path, class: 'btn btn-secondary' %>
             </div>
           <% end %>
-          <div class="card-footer text-muted">
-            <%= link_to 'Back', regions_path, class: 'btn btn-secondary' %>
-          </div>
         </div>
       </div>
     </div>
