--- a/app/views/regions/_region.html.erb
+++ b/app/views/regions/_region.html.erb
@@ -19,17 +19,28 @@
       </div>
       <div class="modal-body">
         <div id="editerrors"></div>
-        <%= form_with(model: region, data: { remote: true}, id: 'edit-form' ) do |f| %>
-            <div class="form-group">
-              <%= f.label :Region%>
-              <%= f.text_field :name, class: 'form-control' %>
+          <div class="container">
+            <div class="row justify-content-center mt-4 ">
+              <div class="col-md-8">
+                <div class="card">
+                  <div class="card-header">
+                    <h1>Edit Region</h1>
+                  </div>
+                  <div class="card-body">
+                    <%= form_with(model: region, data: { remote: true}, id: 'edit-form' ) do |f| %>
+                      <div class="form-group">
+                        <%= f.label :Region%>
+                        <%= f.text_field :name, class: 'form-control' %>
+                      </div>
+                      <div class="card-footer text-muted">
+                        <%= f.submit 'Update Region', class: 'btn btn-primary ' %>
+                        <%= link_to 'Back', regions_path, class: 'btn btn-secondary' %>
+                      </div>
+                    <% end %>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="form-group">
-              <%= f.submit 'Update Region', class: 'btn btn-primary mt-2' %>
-            </div>
-          <% end %>
-          <div class="card-footer text-muted">
-            <%= link_to 'Back', regions_path, class: 'btn btn-secondary' %>
           </div>
        </div>
     </div>
@@ -47,7 +58,7 @@
        <div class="container mt-5">
         <div class="card">
           <div class="card-header">
-            <h1 class="card-title"><%= region.name %></h1>
+            <h1 class="card-title">Name : <%= region.name %></h1>
           </div>
           <div class="card-footer text-muted">
             <%= link_to 'Back', regions_path, class: 'btn btn-secondary' %>
