--- a/app/views/room_facilities/_form.html.erb
+++ b/app/views/room_facilities/_form.html.erb
@@ -18,13 +18,11 @@
               <%= f.label :Room %><br/>
               <%= f.select :room_id, Room.all.collect {|x| [x.name, x.id]}, {} %>
             </div>
-            <div class="form-group">
+            <div class="card-footer text-muted">
               <%= f.submit 'Add Room Facility', class: 'btn btn-primary mt-2' %>
+              <%= link_to 'Back', room_facilities_path, class: 'btn btn-secondary mt-2' %>
             </div>
           <% end %>
-          <div class="card-footer text-muted">
-            <%= link_to 'Back', room_facilities_path, class: 'btn btn-secondary' %>
-          </div>
         </div>
       </div>
     </div>
