--- a/app/views/room_facilities/_room_facility.html.erb
+++ b/app/views/room_facilities/_room_facility.html.erb
@@ -19,25 +19,34 @@
       </div>
       <div class="modal-body">
         <div id="editerrors"></div>
-        <%= form_with(model: room_facility, data: { remote: true}, method: :patch, id: 'edit-form') do |f| %>
-          <div class="form-group">
-            <%= f.label :Name%>
-            <%= f.text_field :name, class: 'form-control' %>
+        <div class="container">
+          <div class="row justify-content-center mt-4 ">
+            <div class="col-md-8">
+              <div class="card">
+                <div class="card-header">Edit Room Facility</div>
+                <div class="card-body">
+                  <%= form_with(model: room_facility, data: { remote: true}, method: :patch, id: 'edit-form') do |f| %>
+                    <div class="form-group">
+                      <%= f.label :Name%>
+                      <%= f.text_field :name, class: 'form-control' %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.label :Category %><br/>
+                      <%= f.select :room_facility_category_id, RoomFacilityCategory.all.collect {|x| [x.name, x.id]}, {} %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.label :Room %><br/>
+                      <%= f.select :room_id, Room.all.collect {|x| [x.name, x.id]}, {} %>
+                    </div>
+                    <div class="card-footer text-muted">
+                      <%= f.submit 'Update Room Facility', class: 'btn btn-primary mt-2' %>
+                      <%= link_to 'Back', room_facilities_path, class: 'btn btn-secondary' %>
+                    </div>
+                  <%end %>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="form-group">
-            <%= f.label :Category %><br/>
-            <%= f.select :room_facility_category_id, RoomFacilityCategory.all.collect {|x| [x.name, x.id]}, {} %>
-          </div>
-          <div class="form-group">
-            <%= f.label :Room %><br/>
-            <%= f.select :room_id, Room.all.collect {|x| [x.name, x.id]}, {} %>
-          </div>
-          <div class="form-group">
-            <%= f.submit 'Update Room Facility', class: 'btn btn-primary mt-2' %>
-          </div>
-        <% end %>
-        <div class="card-footer text-muted">
-          <%= link_to 'Back', room_facilities_path, class: 'btn btn-secondary' %>
         </div>
       </div>
     </div>
