--- a/app/views/room_facility_categories/_form.html.erb
+++ b/app/views/room_facility_categories/_form.html.erb
@@ -10,13 +10,11 @@
               <%= f.label :Name%>
               <%= f.text_field :name, class: 'form-control' %>
             </div>
-            <div class="form-group">
-              <%= f.submit 'Add Category', class: 'btn btn-primary mt-2' %>
+            <div class="card-footer text-muted">
+              <%= f.submit 'Add Category', class: 'btn btn-primary ' %>
+              <%= link_to 'Back', room_facility_categories_path, class: 'btn btn-secondary' %>
             </div>
           <% end %>
-          <div class="card-footer text-muted">
-            <%= link_to 'Back', room_facility_categories_path, class: 'btn btn-secondary' %>
-          </div>
         </div>
       </div>
     </div>
