--- a/app/views/room_facility_categories/_room_facility_category.html.erb
+++ b/app/views/room_facility_categories/_room_facility_category.html.erb
@@ -19,18 +19,27 @@
       </div>
       <div class="modal-body">
         <div id="editerrors"></div>
-        <%= form_with(model: room_facility_category, data: { remote: true}, method: :patch, id: 'edit-form') do |f| %>
-          <div class="form-group">
-            <%= f.label :Name%>
-            <%= f.text_field :name, class: 'form-control' %>
+        <div class="container">
+          <div class="row justify-content-center mt-4 ">
+            <div class="col-md-8">
+              <div class="card">
+                <div class="card-header">Edit Facility Category</div>
+                <div class="card-body">
+                  <%= form_with(model: room_facility_category, data: { remote: true}, method: :patch, id: 'edit-form') do |f| %>
+                    <div class="form-group">
+                      <%= f.label :Name%>
+                      <%= f.text_field :name, class: 'form-control' %>
+                    </div>
+                    <div class="card-footer text-muted">
+                      <%= f.submit 'Update Category', class: 'btn btn-primary ' %>
+                      <%= link_to 'Back', room_facility_categories_path, class: 'btn btn-secondary' %>
+                    </div> 
+                  <% end %>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="form-group">
-            <%= f.submit 'Update Category', class: 'btn btn-primary mt-2' %>
-          </div>
-        <% end %>
-        <div class="card-footer text-muted">
-          <%= link_to 'Back', room_facility_categories_path, class: 'btn btn-secondary' %>
-        </div> 
+        </div>
       </div>
     </div>
   </div>
