--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -3,7 +3,9 @@
   <div class="row justify-content-center mt-4 ">
     <div class="col-md-8">
       <div class="card">
-        <div class="card-header">Add a New Room</div>
+        <div class="card-header">
+          <h1>Add a New Room</h1>
+        </div>
         <div class="card-body">
           <%= form_with scope: :room , url: rooms_path, data:{remote: true} do |f| %>
             <div class="form-group">
@@ -22,13 +24,11 @@
               <%= f.label :Price %>
               <%= f.text_field :price, class: 'form-control' %>
             </div>
-            <div class="form-group">
-              <%= f.submit 'Add Room', class: 'btn btn-primary mt-2' %>
+            <div class="card-footer text-muted">
+              <%= f.submit 'Add Room', class: 'btn btn-primary' %>
+              <%= link_to 'Back', rooms_path, class: 'btn btn-secondary' %>
             </div>
           <% end %>
-          <div class="card-footer text-muted">
-            <%= link_to 'Back', rooms_path, class: 'btn btn-secondary' %>
-          </div>
         </div>
       </div>
     </div>
