WIP:syntax error in client new and edit modal

--- a/app/views/clients/edit.js.erb
+++ b/app/views/clients/edit.js.erb
@@ -1,1 +1,3 @@
-$('#editclient-<%=@client.id%>').show();
+$(document).ready('click', '.edit-button', function(){
+  $('#editclient-<%=@client.id%>').show();
+});
