--- a/app/views/hotel_branches/_hotel.html.erb
+++ b/app/views/hotel_branches/_hotel.html.erb
@@ -24,7 +24,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <div id="editerrors"></div>
+        <div id="editerrors_<%= hotel.id %>"></div>
         <div class="container">
           <div class="row justify-content-center mt-4 ">
             <div class="col-md-8">
