--- a/app/views/hotel_branches/index.html.erb
+++ b/app/views/hotel_branches/index.html.erb
@@ -34,7 +34,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <div id="errors"></div>
+        <div id="newerrors"></div>
         <%= render 'form'%>
       </div>
     </div>
