Modified errors.js for all forms in the application to display a standard validation errors for each respective record either to a new or edit form

--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -17,7 +17,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <div id="editerrors"></div>
+        <div id="editerrors-<%= client.id %>"></div>
           <div class="container">
             <div class="row justify-content-center mt-4 ">
               <div class="col-md-8">
