--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -29,7 +29,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <div id="errors"></div>
+        <div id="newerrors"></div>
         <%= render 'form' %>
       </div>
     </div>
