--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -32,7 +32,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <div id="errors"></div>
+        <div id="newerrors"></div>
         <%= render 'form'%>
       </div>
     </div>
