--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -19,7 +19,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <div id="editerrors"></div>
+        <div id="editerrors_<%= location.id %>"></div>
         <div class="container">
           <div class="row justify-content-center mt-4 ">
             <div class="col-md-8">
