--- a/app/views/room_facility_categories/_room_facility_category.html.erb
+++ b/app/views/room_facility_categories/_room_facility_category.html.erb
@@ -18,7 +18,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <div id="editerrors"></div>
+        <div id="editerrors-<%= room_facility_category.id %>"></div>
         <div class="container">
           <div class="row justify-content-center mt-4 ">
             <div class="col-md-8">
