--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -21,7 +21,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <div id="editerrors"></div>
+        <div id="editerrors-<%= room.id %>"></div>
           <div class="container">
             <div class="row justify-content-center mt-4 ">
               <div class="col-md-8">
