WIP: Show and edit modals working for newly added record

--- a/app/views/locations/create.js.erb
+++ b/app/views/locations/create.js.erb
@@ -1,2 +1,3 @@
 $("#location-table").append("<%= j(render 'location', location: @location) %>");
+$("#newModal form")[0].reset();
 $("#closeNewForm").click()
