--- a/app/views/regions/create.js.erb
+++ b/app/views/regions/create.js.erb
@@ -1,2 +1,3 @@
 $("#region-table").append("<%= j(render 'region', region: @region) %>");
+$("#newModal form")[0].reset();
 $("#closeNewForm").click()
