--- a/app/views/clients/create.js.erb
+++ b/app/views/clients/create.js.erb
@@ -1,2 +1,3 @@
 $("#client-table").append("<%= j(render 'client', client: @client) %>");
+$("#newModal form")[0].reset();
 $("#closeNewForm").click()
