--- a/app/views/hotel_branches/_form.html.erb
+++ b/app/views/hotel_branches/_form.html.erb
@@ -26,11 +26,11 @@
             </div>
             <div class="form-group">
               <%= f.label :Location %><br/>
-              <%= f.collection_select :location_id, Location.all, :id, :name %>
+              <%= f.select :location_id, Location.all.collect {|x| [x.name, x.id]} , {} , class: 'form-control'%>
             </div>
             <div class="form-group">
               <%= f.label :Client %><br/>
-              <%= f.select :client_id, Client.all.collect {|x| [x.name, x.id]}, {} %>
+              <%= f.select :client_id, Client.all.collect {|x| [x.name, x.id]}, {}, class: 'form-control' %>
             </div>
             <div class="form-group">
               <%= f.label :Phone %>
