--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
               <%= f.label :Region %><br/>
-              <%= f.select :region_id, Region.all.collect {|x| [x.name, x.id]}, {} %>
+              <%= f.select :region_id, Region.all.collect {|x| [x.name, x.id]}, {}, class: 'form-control' %>
             </div>
             <div class="card-footer text-muted">
               <%= f.submit 'Add Location', class: 'btn btn-primary' %>
