--- a/app/views/room_facilities/create.js.erb
+++ b/app/views/room_facilities/create.js.erb
@@ -1,2 +1,3 @@
 $("#roomfacility-table").append("<%= j(render 'room_facility', room_facility: @room_facility) %>");
+$("#newModal form")[0].reset();
 $("#closeNewForm").click()
