--- a/app/views/room_facility_categories/create.js.erb
+++ b/app/views/room_facility_categories/create.js.erb
@@ -1,2 +1,3 @@
 $("#roomfacilitycategory-table").append("<%= j(render 'room_facility_category', room_facility_category: @room_facility_category) %>");
+$("#newModal form")[0].reset();
 $("#closeNewForm").click()
