--- a/app/views/rooms/create.js.erb
+++ b/app/views/rooms/create.js.erb
@@ -1,2 +1,3 @@
 $("#room-table").append("<%= j(render 'room', room: @room) %>");
-$("#closeNewForm").click()
+$("#newModal form")[0].reset();
+$("#closeNewForm").click();
